add set preview

--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
 
         gtag('config', 'G-CWZFZTF7LP');
     </script>
+    <meta property="og:title" content="Aline Analytics"/>
+    <meta property="og:description" content="Stop guessing on pay. Empower your leaders with market-aligned compensation data to hire faster and retain talent with total transparency."/>
+    <meta property="og:image" content="https://www.yourdomain.com/images/Aline Logo.png"/>
+    <meta property="og:url" content="https://www.alineanalytics.com"/>
+    <meta property="og:type" content="website"/>
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Aline Analytics">
+    <meta name="twitter:description" content="Stop guessing on pay. Empower your leaders with market-aligned compensation data to hire faster and retain talent with total transparency.">
+    <meta name="twitter:image" content="https://www.alineanalytics.com/images/Aline Logo.png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Aline Analytics</title>
