--- a/services/fsc/index.html
+++ b/services/fsc/index.html
@@ -102,12 +102,14 @@
         <h2 class="section-title">Pricing</h2>
         <div class="content-container pricing-content">
             <div class="pricing-card">
-                <p class="fee-label">Projects are billed hourly at</p>
+                <!-- <p class="fee-label">Projects are billed hourly at</p>
                 <div class="price">$350<span class="per-unit">/hr</span></div>
                 <p class="flat-rate">
                     Most audits fall between $3,250 and $6,500, depending
                     on scope and role complexity.
-                </p>
+                </p> -->
+                <p class="fee-label">Projects are scoped individually based on company size and complexity</p>
+                <p class="flat-rate">Most engagements range from $7,500 to $20,000.</p>
                 <a href="/contact/" class="cta-btn">Get Started Today</a>
             </div>
         </div>
