--- a/services/index.html
+++ b/services/index.html
@@ -51,8 +51,8 @@
                     <br>
                     <br>
                     Deliverable: Clear findings and recommendations.
-                    <br>
-                    Cost: $150 per hour
+                    <!-- <br>
+                    Cost: $150 per hour -->
                 </p>
             </a>
 
@@ -66,8 +66,8 @@
                     <br>
                     <br>
                     Includes: A custom interactive bonus tool for ongoing use.
-                    <br>
-                    Cost: $200 per hour
+                    <!-- <br>
+                    Cost: $200 per hour -->
                 </p>
             </a>
 
@@ -82,8 +82,8 @@
                     <br>
                     Includes: A custom interactive Excel model your team
                     can use for future raise cycles.
-                    <br>
-                    Cost: $175 per hour
+                    <!-- <br>
+                    Cost: $175 per hour -->
                 </p>
             </a>
 
@@ -98,8 +98,8 @@
                     <br>
                     Includes: Your full custom compensation model built in
                     an interactive Excel tool.
-                    <br>
-                    Cost: $350 per hour
+                    <!-- <br>
+                    Cost: $350 per hour -->
                 </p>
             </a>
 
