--- a/services/maa/index.html
+++ b/services/maa/index.html
@@ -112,12 +112,14 @@
         <h2 class="section-title">Pricing</h2>
         <div class="content-container pricing-content">
             <div class="pricing-card">
-                <p class="fee-label">Projects are billed hourly at</p>
+                <!-- <p class="fee-label">Projects are billed hourly at</p>
                 <div class="price">$150<span class="per-unit">/hr</span></div>
                 <p class="flat-rate">
                     Most audits fall between $1,000 and $2,000, depending
                     on scope and role complexity.
-                </p>
+                </p> -->
+                <p class="fee-label">Projects are scoped individually based on company size and complexity</p>
+                <p class="flat-rate">Most engagements range from $2,500 to $5,000.</p>
                 <a href="/contact/" class="cta-btn">Get Started Today</a>
             </div>
         </div>
