--- a/services/ppd/index.html
+++ b/services/ppd/index.html
@@ -118,12 +118,14 @@
         <h2 class="section-title">Pricing</h2>
         <div class="content-container pricing-content">
             <div class="pricing-card">
-                <p class="fee-label">Projects are billed hourly at</p>
+                <!-- <p class="fee-label">Projects are billed hourly at</p>
                 <div class="price">$200<span class="per-unit">/hr</span></div>
                 <p class="flat-rate">
                     Most audits fall between $2,000 and $3,200, depending
                     on scope and role complexity.
-                </p>
+                </p> -->
+                <p class="fee-label">Projects are scoped individually based on company size and complexity</p>
+                <p class="flat-rate">Most engagements range from $5,000 to $12,000.</p>
                 <a href="/contact/" class="cta-btn">Get Started Today</a>
             </div>
         </div>
